--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,7 @@
 [env]
 framework = arduino
 monitor_speed = 115200
-upload_speed = 115200    ;скорость загрузки прошивки
-
+upload_speed = 115200
 lib_deps = 
 
 [env:uno]
@@ -21,3 +20,4 @@ board = uno
 lib_deps = 
 	mathieucarbou/OneWire@^2.3.9
 	olikraus/U8glib@^1.19.1
+	gyverlibs/GyverNTC@^1.5.5
